--- a/ergogen/config.yaml
+++ b/ergogen/config.yaml
@@ -4,7 +4,7 @@ presets:
     capy: 15.5
     capthumbx: 17.8
     capthumby: 16.5
-    kx: 18 # jcmkk3 uses 16.5. i'm choosing to use choc x spacing
+    kx: 18 # jcmkk3 uses 16.5. 18 for choc x spacing
     ky: 16.5
     kcx: kx # spacing for custom thumb keycaps
     kcy: ky # spacing for custom thumb keycaps
@@ -17,10 +17,10 @@ presets:
   mx_spaced: # y -0.5mm
     capx: 17.85
     capy: 18
-    capthumbx: 17
-    capthumby: 16.15
-    capleverx: 15.83
-    caplevery: 15.87
+    capthumbx: 17.95
+    capthumby: 18.35
+    capleverx: 15.85
+    caplevery: 16.8
     kx: 19
     ky: 18.5
     inner_spread: kx-0.5
@@ -34,21 +34,33 @@ units:
   $extends: presets.mx_spaced
   angle: 22 # was 27.5
   sf: 19.151 # may want to change this for fab
-  # mcu dimensions (from Nicell himself)
-  mcux: 18
-  mcuy: 33.4
-  # joycon battery dimensions with a little tolerance
-  bcx: 24.5+0.7
-  bcy: 52+0.7
-  # reset switch dimensions
-  rsx: 4.7
-  rsy: 3.5
-  rsh: 0.75 # hole diameter
-  rsd: 2.75 # distance between holes
+  ## nice!nano dimensions (from Nicell himself)
+  # mcux: 18
+  # mcuy: 33.4
+  ## supermini dimensions
+  # mcux: 18.1 # with 0.1mm tolerance for fr4 variance
+  # mcuy: 33.85 # length from usb to end of pcb
+  ## promicro footprint dimensions
+  mcux: 17.78
+  mcuy: 33.02 # board only, no usb
+  # netdot usb adapter dimensions
+  ndx: 12 # actual is ~10.82 at widest section
+  ndy: 6 # actual is 5.4 while plugged in
+  # space between keycap and case wall
+  wallx: 1.25
+  wally: 1.1
+
+  # joycon battery dimensions plus tolerance
+  # bcx: 24.5+0.7
+  # bcy: 52+0.7
+
+  # 301230 battery dimensions
+  bcx: 31.5+0.8
+  bcy: 12.5+0.8
+
   # screw hole diameter (M2)
-  # screw head diameter ~3.3
-  # M2 nut height ~1.5
   scd: 2.2
+  # screw head diameter ~3.3
 
 points:
   zones:
@@ -149,7 +161,7 @@ points:
         width: capx
         height: capy
         padding: ky
-        spread: kx
+        spread: kx+0.7
         autobind: 0
       mirror.$extends: points.zones.matrix.mirror
       columns:
@@ -162,16 +174,16 @@ points:
             orient: 47.5
             shift: [152.1536-148.8676+2.5, -(139.4486-142.9557)] # x was +1.6
             rotate: -46
-            column_net: C1
+            column_net: C2
         base:
           rows:
             cluster:
               bind: [0, 0.12kx, 0, 0.2kx]
           key:
             splay: 5
-            stagger: 2.5+4 # was +4
+            stagger: 2.5+4
             spread: cx+2.5
-            column_net: C2
+            column_net: C3
             adjust:
               orient: angle - pinky_splay - ring_splay + 20 + 3
               shift: [0.887, -0.4617]
@@ -179,9 +191,9 @@ points:
         extension:
           rows:
             cluster:
-              bind: [5.976+2, 0, 0, 38.659+1.5]
+              bind: [5.976+2, 0, 0, 38.659+1.5+15]
           key:
-            column_net: C3
+            column_net: C4
             stagger: -4
       rows:
         cluster:
@@ -190,46 +202,97 @@ points:
           row_net: R7
     ref_top_center:
       anchor:
-        aggregate.parts: [matrix_pinky_top, mirror_matrix_pinky_top]
-        shift: [0, 11.668]
+        aggregate.parts: [matrix_middle_top, mirror_matrix_middle_top]
+        shift: [0, 13.176]
     ref_bottom_center:
       anchor:
         aggregate.parts: [thumb_extension_cluster, mirror_thumb_extension_cluster]
         shift: [0, -12.433]
+    ref_mcu:
+      anchor:
+        ref: ref_top_center
+        # !!! NOTE: this requires a cutout for the magnetic usb adapter !!!
+        shift: [0, -mcuy/2-1.262-0.45-1.15] # -0.45mm lines up mcu usb to pcb edge. -1.15mm leaves 1mm of adapter protruding from 2.75mm case with 0.5mm air gap.
     battery:
       anchor:
         ref: ref_top_center
-        shift: [0, -mcuy-bcy/2-10]
+        shift: [0, -mcuy-bcy/2-20]
     screw_top_left:
       anchor:
-        ref: matrix_ring_home
-        shift: [-0.55kx, -0.5ky]
+        ref: ref_top_center
+        shift: [-92.1, -2]
       key.tags: screw_hole
-    screw_mirror_top_left:
+    screw_top_left_corner:
       anchor:
-        ref: mirror_matrix_ring_home
-        shift: [-0.55kx, -0.5ky]
+        ref: ref_top_center
+        shift: [-116.75+3, -3]
+      key.tags: screw_hole
+    screw_top_right_corner:
+      anchor:
+        ref: ref_top_center
+        shift: [116.75-3, -3]
       key.tags: screw_hole
     screw_top_right:
       anchor:
-        ref: matrix_middle_home
-        shift: [-0.55kx, 0]
+        ref: ref_top_center
+        shift: [92.1, -2]
       key.tags: screw_hole
-    screw_mirror_top_right:
+    screw_bottom_left:
       anchor:
-        ref: mirror_matrix_middle_home
-        shift: [-0.55kx, 0]
+        ref: ref_top_center
+        shift: [-113.75, -75.406]
       key.tags: screw_hole
-    screw_bottom:
+    screw_bottom_right:
       anchor:
-        ref: battery
-        shift: [-0.5bcx-3, 0]
+        ref: ref_top_center
+        shift: [113.75, -75.406]
       key.tags: screw_hole
-    screw_mirror_bottom:
+    screw_center:
       anchor:
-        ref: battery
-        shift: [0.5bcx+3, 0]
+        ref: ref_top_center
+        shift: [0, -39.2]
       key.tags: screw_hole
+    screw_top_center_left:
+      anchor:
+        ref: ref_top_center
+        shift: [-34, -3]
+      key.tags: screw_hole
+    screw_top_center_right:
+      anchor:
+        ref: ref_top_center
+        shift: [34, -3]
+      key.tags: screw_hole
+    screw_bottom_center_left:
+      anchor:
+        shift: [-25, -75.406]
+        ref: ref_top_center
+      key.tags: screw_hole
+    screw_bottom_center_right:
+      anchor:
+        ref: ref_top_center
+        shift: [25, -75.406]
+      key.tags: screw_hole
+    screw_th_flex_left:
+      anchor:
+        ref: thumb_flexion_cluster
+        shift: [-3, -12.5]
+      key.tags: screw_hole
+    screw_th_flex_right:
+      anchor:
+        ref: mirror_thumb_flexion_cluster
+        shift: [-3, -12.5]
+      key.tags: screw_hole
+    screw_th_ext_left:
+      anchor:
+        ref: thumb_extension_cluster
+        shift: [3, 14]
+      key.tags: screw_hole
+    screw_th_ext_right:
+      anchor:
+        ref: mirror_thumb_extension_cluster
+        shift: [3, 14]
+      key.tags: screw_hole
+
 outlines:
   # !!!add fillets at the very end!!! or you will get malformed outline (self-intersecting) errors in kicad
   _key_outline:
@@ -245,39 +308,36 @@ outlines:
         - /thumb_.*/
     - what: rectangle
       operation: add
-      size: [240, 83.169]
+      size: [240-6.5, 83.169+1.746-6.5] # -2.75 in each dimension with 0.5 gap in each dimension
       where: ref_top_center
-      adjust.shift: [0, -25-16.584]
-    # - what: rectangle
-    #   operation: add
-    #   size: [69.2051, 15.628]
-    #   where: [thumb_extension_cluster]
-    #   adjust:
-    #     orient: 37
-    #     shift: [7.237+23.635, 14.019+0.451]
-    # - what: polygon
-    #   operation: add
-    #   points:
-    #     - ref: matrix_pinky_top
-    #       shift: [-0.5sf, 0.5sf]
-    #     - ref: mirror_matrix_pinky_top
-    #       shift: [-0.5sf, 0.5sf]
-    #     - ref: mirror_matrix_pinky_bottom
-    #       shift: [-0.5switch_xy_mx, -0.5sf]
-    #     - ref: matrix_pinky_bottom
-    #       shift: [-0.5switch_xy_mx, -0.5sf]
-  _center:
+      adjust.shift: [0, -25-14.199]
+  key_walls:
     - what: rectangle
+      bound: false
+      size: [capx+2wallx, capy+2wally]
       where:
-        ref: ref_top_center
-        shift: [0, -9.5-(mcuy+5)/2]
-      size: [73.849, mcuy+5]
-  _center_test: # minimal join between sides for test printing
+        - /matrix_.*/
+    - what: rectangle # helper rectangles fill in gaps
+      bound: false
+      where: [/matrix_pinky_top/, /matrix_ring_top/]
+      size: [capx+2wallx, 2capy+2wally]
+      adjust.shift: [4, -0.5capy]
     - what: rectangle
+      bound: false
+      size: [capx+2wallx, capy+2wally]
+      where: [/thumb_base_.*/, /thumb_extension_.*/]
+    - what: rectangle
+      bound: false
+      size: [capleverx+4, caplevery+0.6]
       where:
-        ref: ref_top_center
-        shift: [0, -25]
-      size: [75, 19]
+        - /thumb_flexion_.*/
+      adjust.shift: [1.5, 0]
+    - what: rectangle # helper
+      bound: false
+      size: [capleverx+2, caplevery+0.6]
+      where:
+        - /thumb_flexion_.*/
+      adjust.shift: [0.5, 5]
   _debug_ref_top_center:
     - what: circle
       where: ref_top_center
@@ -289,10 +349,42 @@ outlines:
     - what: rectangle
       where: [thumb_flexion_cluster, mirror_thumb_flexion_cluster]
       size: switch_xy_choc
-    # - what: rectangle # mcu
-      # where: ref_top_center
-      # adjust.shift: [0, -mcuy/2-1.48]
-      # size: [mcux+2.5, mcuy+2.5]
+  _mcu_cutout:
+    - what: rectangle
+      where: ref_mcu
+      adjust.shift: [0, 1.27]
+      size: [mcux+2, mcuy+2]
+  _netdot_cutout:
+    - what: rectangle
+      where: ref_mcu
+      adjust.shift: [0, mcuy/2+0.5ndy+1.27]
+      size: [ndx, ndy]
+  _battery_cutout:
+    - what: rectangle
+      where: battery
+      size: [bcx, bcy]
+  _conn_battery_cutout:
+    - what: rectangle
+      where: battery
+      adjust.shift: [0, 0.5bcy+5-1.11]
+      size: [5.2+2, 5.82+3]
+  _switch_power_cutout:
+    - what: rectangle
+      where: ref_top_center
+      adjust.shift: [18, -1.7252-0.48]
+      size: [8.8+2, 4.55+2]
+  _switch_reset_cutout:
+    - what: rectangle
+      where: ref_top_center
+      adjust.shift: [-116.75+21, -76.0565-1]
+      size: [7.8+2, 6.4+2]
+  case_cutouts:
+    - name: _mcu_cutout
+    - name: _netdot_cutout
+    - name: _battery_cutout
+    - name: _conn_battery_cutout
+    - name: _switch_power_cutout
+    - name: _switch_reset_cutout
   keycaps:
     - what: rectangle
       where:
@@ -304,76 +396,76 @@ outlines:
     - what: rectangle
       where: [thumb_flexion_cluster, mirror_thumb_flexion_cluster]
       size: [capleverx, caplevery]
-  _battery_cutout:
-    - what: rectangle
-      where: battery
-      size: [bcx, bcy]
   pcb:
     - name: _key_outline
-    # - name: _center
-    # - name: _battery_cutout
-    #   operation: subtract
-    # - name: _center_test
+    - name: _netdot_cutout
+      operation: subtract
+    - name: _battery_cutout
+      operation: subtract
+    # - name: key_walls # for debugging
+    #   operation: stack # for debugging
+    # - name: case_cutouts # for debugging
+    #   operation: stack # for debugging
     # - name: _debug_ref_top_center
     #   operation: stack
   screws:
     - what: circle
       where: /screw_/
       radius: 0.5scd
+  _lofree_center_pin_cutouts:
+    - what: circle # cutout for lofree central pin
+      where: [/matrix_.*/, /thumb_.*/]
+      radius: (4.8/2)+0.4
+  _case_bottom:
+    - name: _key_outline
+    - name: _lofree_center_pin_cutouts
+      operation: subtract
   preview:
     - name: pcb
     - name: keycaps
       operation: stack
-
 pcbs:
-  Monolog:
-    ### commented out outline for edge cuts. using a footprint instead to get desired board shape.
+  Alias: # name must be capitalized or bugs!
     outlines:
       main:
         outline: pcb
     footprints:
-      #when creating this footprint, make sure:
-        #fillet is enabled before adding any customizations or curves
-        #make sure to save and import as svg, NOT dxf! this will help avoid malformed outline/self-intersecting errors in kicad
-      # edge_cuts: #when creating this footprint, make sure to save and import as svg, NOT dxf! this will help avoid malformed outline/self-intersecting errors in kicad
-      #   what: edge_cuts
-      #   where: matrix_middle_bottom
-      #   adjust.shift: [11.661, -5.374]
-      # mcu:
-      #   what: promicro
-      #   where: ref_top_center
-      #   adjust:
-      #     shift: [0, -mcuy/2-1.080-0.4-1.5] # goal is 0.4mm (additional 1.5mm if using magnetic adapter and 2.5mm case thickness) from pcb edge so n!n usb is flush with pcb (usb port protrudes 0.1mm)
-      #     rotate: -90
-      #   params:
-      #     orientation: down
-      #     P21: R0
-      #     P20: R1
-      #     P19: R2
-      #     P18: R3
-      #     P15: R4
-      #     P14: R5
-      #     P16: R6
-      #     P10: R7
-      #
-      #     P2: C0
-      #     P3: C1
-      #     P4: C2
-      #     P5: C3
-      #     P6: C4
+      mcu:
+        what: promicro
+        where: ref_mcu
+        adjust:
+          shift: [0, 0]
+          rotate: -90
+        params:
+          orientation: up
+          P21: R0
+          P20: R1
+          P19: R2
+          P18: R3
+          P15: R4
+          P14: R5
+          P16: R6
+          P10: R7
+
+          P2: C0
+          P3: C1
+          P4: C2
+          P5: C3
+          P6: C4
       switches:
-        what: switch_choc_v1_v2 # edited version of default footprint, don't try to make reversible
+        what: switch_choc_v1_v2 # edited version of footprint, don't try to make reversible
         where: [/matrix/, /thumb/]
         params:
           from: "{{column_net}}"
           to: "{{colrow}}"
           reversible: false
           hotswap: true
+          # solder: true
           outer_pad_width_back: 2.4
-          show_keycaps: true
+          # show_corner_marks: true
+          # show_keycaps: true
           keycaps_x: capx
           keycaps_y: capy
-
       diodes:
         what: combo_diode
         where: [/matrix/, /thumb/]
@@ -385,13 +477,12 @@ pcbs:
         adjust:
           shift: [0, -5]
           resist: true
-          rotate: 180
       switch_power:
         what: infused-kim/switch_power
         where: ref_top_center
         adjust:
           rotate: 90
-          shift: [0, -1.7252]
+          shift: [18, -1.7252]
         params: 
           reverse: false
           from: RAW
@@ -400,55 +491,53 @@ pcbs:
         what: infused-kim/text
         where: ref_top_center
         params:
-          text: "ON            OFF"
+          text: "ON"
           reverse: false
         adjust:
-          shift: [0.24, -1.]
+          shift: [12, -1.]
       switch_reset:
-        what: reset_button
+        what: SKHLLCA010
         where: ref_top_center
         adjust:
-          shift: [0, -85.394+0.4rsy+0.14981]
+          shift: [-116.75+21, -76.0565]
           rotate: 180
+        # params:
+        #   reverse: false
+        #   include_bosses: true
+        #   silkscreen: false
+      batt_connector:
+        what: infused-kim/conn_molex_pico_ezmate_1x02
+        where: battery
+        adjust: 
+          shift: [0, 0.5bcy+5]
+          rotate: 0
         params:
           reverse: false
-          include_bosses: true
-          silkscreen: false
-      # batt_connector:
-      #   what: infused-kim/conn_molex_pico_ezmate_1x02
-      #   where: battery
-      #   adjust: 
-      #     shift: [-12, 0.5bcy+5]
-      #     rotate: 0
-      #   params:
-      #     reverse: false
-      #     pad_1: BAT_P
-      #     pad_2: GND
-      # batt_pads:
-      #   what: infused-kim/pads
-      #   where: battery
-      #   adjust:
-      #     shift: [-12, 0.5bcy+5]
-      #     rotate: -27.5
-      #   params:
-      #     reverse: false
-      #     space: 1.25
-      #     net_1: BAT_P
-      #     net_2: GND
-      # batt_icon:
-      #   what: infused-kim/icon_bat
-      #   where: battery
-      #   params:
-      #     reverse: false
-      #     spacing: 1.5
-      #   adjust:
-      #     shift: [-10.4, 0.5bcy+5+3.2]
-      #     rotate: -27.5
+          pad_1: BAT_P
+          pad_2: GND
+      batt_pads:
+        what: infused-kim/pads
+        where: battery
+        adjust:
+          shift: [0, 0.5bcy+5]
+        params:
+          reverse: false
+          space: 1.25
+          net_1: BAT_P
+          net_2: GND
+      batt_icon:
+        what: infused-kim/icon_bat
+        where: battery
+        params:
+          reverse: false
+          spacing: 1.5
+        adjust:
+          shift: [0, 0.5bcy+5+3.2]
       m2_screws:
         what: infused-kim/mounting_hole
         # changed courtyard_offset in mounting_hole.js to 0.47
         # increases outline to m2 screwhead size (diameter ~3.4mm)
-        # where: screw_hole
+        where: screw_hole
         params:
           drill: scd
           outline: 0.13
@@ -462,3 +551,16 @@ pcbs:
           # jlc text is off center because the order# is longer than JLCJLCJLCJLC
           # hide at the top outer corner of the pcb if you want it less likely to be seen
           shift: [1.5, -0.2ky]
+
+  case_bottom: # use to generate cutouts for bottom case
+    outlines:
+      main:
+        outline: _case_bottom
+    footprints:
+      hotswap_cutouts:
+        what: switch_choc_v1_v2 # placeholder. manually replace in kicad
+        where: [/matrix/, /thumb/]
+        params:
+          from: "{{column_net}}"
+          to: "{{colrow}}"
+          reversible: false
